# minicpm-vision

./: .gitignore  .pre-commit-config.yaml  mix.exs  pyproject.toml
config/: config.exs
lib/: application.ex  minicpm_supervisor.ex  minicpm_vision.ex  minicpm_vision_client.ex  minicpm_vision_service.ex
lib/templates/: image_analysis.eex  initialization.eex  multiple_image_analysis.eex  video_analysis.eex
tests/: test_minicpm_vision.exs  test_minicpm_vision_service.exs
tests/media/: readme.md  vision-todo.md
